parser.output
   0  $accept : %entry% $end

   1  program_rule : statements EOF

   2  statements : statement
   3             | statement statements

   4  statement : DEF ID LPAREN parameters RPAREN COLON statement_list ENDEF
   5            | IF expr COLON statement_list ELSE COLON statement_list ENDIF
   6            | IF expr COLON statement_list ENDIF
   7            | WHILE expr COLON statement_list NEXT
   8            | RETURN expr
   9            | expr
  10            | BREAK
  11            | CONTINUE

  12  statement_list : statement
  13                 | statement statement_list

  14  typ : BOOL
  15      | INT

  16  Id_catg : ID
  17          | POINTER ID

  18  expr : LITERAL
  19       | BLIT
  20       | ID
  21       | expr PLUS expr
  22       | expr MINUS expr
  23       | ID ASSIGN expr
  24       | typ Id_catg ASSIGN expr
  25       | DEREF expr ASSIGN expr
  26       | expr EQ expr
  27       | expr NEQ expr
  28       | expr MUL expr
  29       | expr LT expr
  30       | expr GT expr
  31       | expr LTE expr
  32       | expr GTE expr
  33       | ID LPAREN args_opt RPAREN
  34       | LPAREN expr RPAREN
  35       | DEREF expr

  36  args_opt :
  37           | args

  38  args : expr
  39       | expr COMMA args

  40  parameters :
  41             | parameter_list

  42  parameter_list : ID
  43                 | ID COMMA parameter_list

  44  %entry% : '\001' program_rule

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program_rule  (44)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	DEF  shift 7
	IF  shift 8
	WHILE  shift 9
	RETURN  shift 10
	INT  shift 11
	BOOL  shift 12
	BREAK  shift 13
	CONTINUE  shift 14
	DEREF  shift 15
	.  error

	program_rule  goto 16
	statements  goto 17
	statement  goto 18
	expr  goto 19
	typ  goto 20


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr : LITERAL .  (18)

	.  reduce 18


state 4
	expr : BLIT .  (19)

	.  reduce 19


5: shift/reduce conflict (shift 21, reduce 20) on LPAREN
5: shift/reduce conflict (shift 22, reduce 20) on ASSIGN
state 5
	expr : ID .  (20)
	expr : ID . ASSIGN expr  (23)
	expr : ID . LPAREN args_opt RPAREN  (33)

	LPAREN  shift 21
	ASSIGN  shift 22
	LITERAL  reduce 20
	BLIT  reduce 20
	ID  reduce 20
	RPAREN  reduce 20
	COLON  reduce 20
	COMMA  reduce 20
	DEF  reduce 20
	ENDEF  reduce 20
	ELSE  reduce 20
	IF  reduce 20
	ENDIF  reduce 20
	WHILE  reduce 20
	NEXT  reduce 20
	RETURN  reduce 20
	INT  reduce 20
	BOOL  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20
	EQ  reduce 20
	NEQ  reduce 20
	LT  reduce 20
	GT  reduce 20
	LTE  reduce 20
	GTE  reduce 20
	EOF  reduce 20
	BREAK  reduce 20
	CONTINUE  reduce 20
	DEREF  reduce 20
	MUL  reduce 20


state 6
	expr : LPAREN . expr RPAREN  (34)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 23
	typ  goto 20


state 7
	statement : DEF . ID LPAREN parameters RPAREN COLON statement_list ENDEF  (4)

	ID  shift 24
	.  error


state 8
	statement : IF . expr COLON statement_list ELSE COLON statement_list ENDIF  (5)
	statement : IF . expr COLON statement_list ENDIF  (6)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 25
	typ  goto 20


state 9
	statement : WHILE . expr COLON statement_list NEXT  (7)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 26
	typ  goto 20


state 10
	statement : RETURN . expr  (8)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 27
	typ  goto 20


state 11
	typ : INT .  (15)

	.  reduce 15


state 12
	typ : BOOL .  (14)

	.  reduce 14


state 13
	statement : BREAK .  (10)

	.  reduce 10


state 14
	statement : CONTINUE .  (11)

	.  reduce 11


state 15
	expr : DEREF . expr ASSIGN expr  (25)
	expr : DEREF . expr  (35)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 28
	typ  goto 20


state 16
	%entry% : '\001' program_rule .  (44)

	.  reduce 44


state 17
	program_rule : statements . EOF  (1)

	EOF  shift 29
	.  error


state 18
	statements : statement .  (2)
	statements : statement . statements  (3)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	DEF  shift 7
	IF  shift 8
	WHILE  shift 9
	RETURN  shift 10
	INT  shift 11
	BOOL  shift 12
	BREAK  shift 13
	CONTINUE  shift 14
	DEREF  shift 15
	EOF  reduce 2

	statements  goto 30
	statement  goto 18
	expr  goto 19
	typ  goto 20


state 19
	statement : expr .  (9)
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	LITERAL  reduce 9
	BLIT  reduce 9
	ID  reduce 9
	LPAREN  reduce 9
	DEF  reduce 9
	ENDEF  reduce 9
	ELSE  reduce 9
	IF  reduce 9
	ENDIF  reduce 9
	WHILE  reduce 9
	NEXT  reduce 9
	RETURN  reduce 9
	INT  reduce 9
	BOOL  reduce 9
	EOF  reduce 9
	BREAK  reduce 9
	CONTINUE  reduce 9
	DEREF  reduce 9


state 20
	expr : typ . Id_catg ASSIGN expr  (24)

	ID  shift 40
	POINTER  shift 41
	.  error

	Id_catg  goto 42


state 21
	expr : ID LPAREN . args_opt RPAREN  (33)
	args_opt : .  (36)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	RPAREN  reduce 36

	expr  goto 43
	typ  goto 20
	args_opt  goto 44
	args  goto 45


state 22
	expr : ID ASSIGN . expr  (23)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 46
	typ  goto 20


state 23
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)
	expr : LPAREN expr . RPAREN  (34)

	RPAREN  shift 47
	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	.  error


state 24
	statement : DEF ID . LPAREN parameters RPAREN COLON statement_list ENDEF  (4)

	LPAREN  shift 48
	.  error


state 25
	statement : IF expr . COLON statement_list ELSE COLON statement_list ENDIF  (5)
	statement : IF expr . COLON statement_list ENDIF  (6)
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	COLON  shift 49
	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	.  error


state 26
	statement : WHILE expr . COLON statement_list NEXT  (7)
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	COLON  shift 50
	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	.  error


state 27
	statement : RETURN expr .  (8)
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	LITERAL  reduce 8
	BLIT  reduce 8
	ID  reduce 8
	LPAREN  reduce 8
	DEF  reduce 8
	ENDEF  reduce 8
	ELSE  reduce 8
	IF  reduce 8
	ENDIF  reduce 8
	WHILE  reduce 8
	NEXT  reduce 8
	RETURN  reduce 8
	INT  reduce 8
	BOOL  reduce 8
	EOF  reduce 8
	BREAK  reduce 8
	CONTINUE  reduce 8
	DEREF  reduce 8


state 28
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : DEREF expr . ASSIGN expr  (25)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)
	expr : DEREF expr .  (35)

	.  reduce 35


state 29
	program_rule : statements EOF .  (1)

	.  reduce 1


state 30
	statements : statement statements .  (3)

	.  reduce 3


state 31
	expr : expr PLUS . expr  (21)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 52
	typ  goto 20


state 32
	expr : expr MINUS . expr  (22)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 53
	typ  goto 20


state 33
	expr : expr EQ . expr  (26)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 54
	typ  goto 20


state 34
	expr : expr NEQ . expr  (27)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 55
	typ  goto 20


state 35
	expr : expr LT . expr  (29)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 56
	typ  goto 20


state 36
	expr : expr GT . expr  (30)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 57
	typ  goto 20


state 37
	expr : expr LTE . expr  (31)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 58
	typ  goto 20


state 38
	expr : expr GTE . expr  (32)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 59
	typ  goto 20


state 39
	expr : expr MUL . expr  (28)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 60
	typ  goto 20


state 40
	Id_catg : ID .  (16)

	.  reduce 16


state 41
	Id_catg : POINTER . ID  (17)

	ID  shift 61
	.  error


state 42
	expr : typ Id_catg . ASSIGN expr  (24)

	ASSIGN  shift 62
	.  error


state 43
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)
	args : expr .  (38)
	args : expr . COMMA args  (39)

	COMMA  shift 63
	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	RPAREN  reduce 38


state 44
	expr : ID LPAREN args_opt . RPAREN  (33)

	RPAREN  shift 64
	.  error


state 45
	args_opt : args .  (37)

	.  reduce 37


state 46
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : ID ASSIGN expr .  (23)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	LITERAL  reduce 23
	BLIT  reduce 23
	ID  reduce 23
	LPAREN  reduce 23
	RPAREN  reduce 23
	COLON  reduce 23
	COMMA  reduce 23
	DEF  reduce 23
	ENDEF  reduce 23
	ELSE  reduce 23
	IF  reduce 23
	ENDIF  reduce 23
	WHILE  reduce 23
	NEXT  reduce 23
	RETURN  reduce 23
	INT  reduce 23
	BOOL  reduce 23
	ASSIGN  reduce 23
	EOF  reduce 23
	BREAK  reduce 23
	CONTINUE  reduce 23
	DEREF  reduce 23


state 47
	expr : LPAREN expr RPAREN .  (34)

	.  reduce 34


state 48
	statement : DEF ID LPAREN . parameters RPAREN COLON statement_list ENDEF  (4)
	parameters : .  (40)

	ID  shift 65
	RPAREN  reduce 40

	parameters  goto 66
	parameter_list  goto 67


state 49
	statement : IF expr COLON . statement_list ELSE COLON statement_list ENDIF  (5)
	statement : IF expr COLON . statement_list ENDIF  (6)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	DEF  shift 7
	IF  shift 8
	WHILE  shift 9
	RETURN  shift 10
	INT  shift 11
	BOOL  shift 12
	BREAK  shift 13
	CONTINUE  shift 14
	DEREF  shift 15
	.  error

	statement  goto 68
	statement_list  goto 69
	expr  goto 19
	typ  goto 20


state 50
	statement : WHILE expr COLON . statement_list NEXT  (7)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	DEF  shift 7
	IF  shift 8
	WHILE  shift 9
	RETURN  shift 10
	INT  shift 11
	BOOL  shift 12
	BREAK  shift 13
	CONTINUE  shift 14
	DEREF  shift 15
	.  error

	statement  goto 68
	statement_list  goto 70
	expr  goto 19
	typ  goto 20


state 51
	expr : DEREF expr ASSIGN . expr  (25)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 71
	typ  goto 20


state 52
	expr : expr . PLUS expr  (21)
	expr : expr PLUS expr .  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	MUL  shift 39
	LITERAL  reduce 21
	BLIT  reduce 21
	ID  reduce 21
	LPAREN  reduce 21
	RPAREN  reduce 21
	COLON  reduce 21
	COMMA  reduce 21
	DEF  reduce 21
	ENDEF  reduce 21
	ELSE  reduce 21
	IF  reduce 21
	ENDIF  reduce 21
	WHILE  reduce 21
	NEXT  reduce 21
	RETURN  reduce 21
	INT  reduce 21
	BOOL  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21
	ASSIGN  reduce 21
	EQ  reduce 21
	NEQ  reduce 21
	LT  reduce 21
	GT  reduce 21
	LTE  reduce 21
	GTE  reduce 21
	EOF  reduce 21
	BREAK  reduce 21
	CONTINUE  reduce 21
	DEREF  reduce 21


state 53
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr MINUS expr .  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	MUL  shift 39
	LITERAL  reduce 22
	BLIT  reduce 22
	ID  reduce 22
	LPAREN  reduce 22
	RPAREN  reduce 22
	COLON  reduce 22
	COMMA  reduce 22
	DEF  reduce 22
	ENDEF  reduce 22
	ELSE  reduce 22
	IF  reduce 22
	ENDIF  reduce 22
	WHILE  reduce 22
	NEXT  reduce 22
	RETURN  reduce 22
	INT  reduce 22
	BOOL  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22
	ASSIGN  reduce 22
	EQ  reduce 22
	NEQ  reduce 22
	LT  reduce 22
	GT  reduce 22
	LTE  reduce 22
	GTE  reduce 22
	EOF  reduce 22
	BREAK  reduce 22
	CONTINUE  reduce 22
	DEREF  reduce 22


state 54
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr EQ expr .  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	LITERAL  reduce 26
	BLIT  reduce 26
	ID  reduce 26
	LPAREN  reduce 26
	RPAREN  reduce 26
	COLON  reduce 26
	COMMA  reduce 26
	DEF  reduce 26
	ENDEF  reduce 26
	ELSE  reduce 26
	IF  reduce 26
	ENDIF  reduce 26
	WHILE  reduce 26
	NEXT  reduce 26
	RETURN  reduce 26
	INT  reduce 26
	BOOL  reduce 26
	ASSIGN  reduce 26
	EQ  reduce 26
	NEQ  reduce 26
	EOF  reduce 26
	BREAK  reduce 26
	CONTINUE  reduce 26
	DEREF  reduce 26


state 55
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr NEQ expr .  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	LITERAL  reduce 27
	BLIT  reduce 27
	ID  reduce 27
	LPAREN  reduce 27
	RPAREN  reduce 27
	COLON  reduce 27
	COMMA  reduce 27
	DEF  reduce 27
	ENDEF  reduce 27
	ELSE  reduce 27
	IF  reduce 27
	ENDIF  reduce 27
	WHILE  reduce 27
	NEXT  reduce 27
	RETURN  reduce 27
	INT  reduce 27
	BOOL  reduce 27
	ASSIGN  reduce 27
	EQ  reduce 27
	NEQ  reduce 27
	EOF  reduce 27
	BREAK  reduce 27
	CONTINUE  reduce 27
	DEREF  reduce 27


state 56
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr LT expr .  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 39
	LITERAL  reduce 29
	BLIT  reduce 29
	ID  reduce 29
	LPAREN  reduce 29
	RPAREN  reduce 29
	COLON  reduce 29
	COMMA  reduce 29
	DEF  reduce 29
	ENDEF  reduce 29
	ELSE  reduce 29
	IF  reduce 29
	ENDIF  reduce 29
	WHILE  reduce 29
	NEXT  reduce 29
	RETURN  reduce 29
	INT  reduce 29
	BOOL  reduce 29
	ASSIGN  reduce 29
	EQ  reduce 29
	NEQ  reduce 29
	LT  reduce 29
	GT  reduce 29
	LTE  reduce 29
	GTE  reduce 29
	EOF  reduce 29
	BREAK  reduce 29
	CONTINUE  reduce 29
	DEREF  reduce 29


state 57
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr GT expr .  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 39
	LITERAL  reduce 30
	BLIT  reduce 30
	ID  reduce 30
	LPAREN  reduce 30
	RPAREN  reduce 30
	COLON  reduce 30
	COMMA  reduce 30
	DEF  reduce 30
	ENDEF  reduce 30
	ELSE  reduce 30
	IF  reduce 30
	ENDIF  reduce 30
	WHILE  reduce 30
	NEXT  reduce 30
	RETURN  reduce 30
	INT  reduce 30
	BOOL  reduce 30
	ASSIGN  reduce 30
	EQ  reduce 30
	NEQ  reduce 30
	LT  reduce 30
	GT  reduce 30
	LTE  reduce 30
	GTE  reduce 30
	EOF  reduce 30
	BREAK  reduce 30
	CONTINUE  reduce 30
	DEREF  reduce 30


state 58
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr LTE expr .  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 39
	LITERAL  reduce 31
	BLIT  reduce 31
	ID  reduce 31
	LPAREN  reduce 31
	RPAREN  reduce 31
	COLON  reduce 31
	COMMA  reduce 31
	DEF  reduce 31
	ENDEF  reduce 31
	ELSE  reduce 31
	IF  reduce 31
	ENDIF  reduce 31
	WHILE  reduce 31
	NEXT  reduce 31
	RETURN  reduce 31
	INT  reduce 31
	BOOL  reduce 31
	ASSIGN  reduce 31
	EQ  reduce 31
	NEQ  reduce 31
	LT  reduce 31
	GT  reduce 31
	LTE  reduce 31
	GTE  reduce 31
	EOF  reduce 31
	BREAK  reduce 31
	CONTINUE  reduce 31
	DEREF  reduce 31


state 59
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)
	expr : expr GTE expr .  (32)

	PLUS  shift 31
	MINUS  shift 32
	MUL  shift 39
	LITERAL  reduce 32
	BLIT  reduce 32
	ID  reduce 32
	LPAREN  reduce 32
	RPAREN  reduce 32
	COLON  reduce 32
	COMMA  reduce 32
	DEF  reduce 32
	ENDEF  reduce 32
	ELSE  reduce 32
	IF  reduce 32
	ENDIF  reduce 32
	WHILE  reduce 32
	NEXT  reduce 32
	RETURN  reduce 32
	INT  reduce 32
	BOOL  reduce 32
	ASSIGN  reduce 32
	EQ  reduce 32
	NEQ  reduce 32
	LT  reduce 32
	GT  reduce 32
	LTE  reduce 32
	GTE  reduce 32
	EOF  reduce 32
	BREAK  reduce 32
	CONTINUE  reduce 32
	DEREF  reduce 32


state 60
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr MUL expr .  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	.  reduce 28


state 61
	Id_catg : POINTER ID .  (17)

	.  reduce 17


state 62
	expr : typ Id_catg ASSIGN . expr  (24)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 72
	typ  goto 20


state 63
	args : expr COMMA . args  (39)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	INT  shift 11
	BOOL  shift 12
	DEREF  shift 15
	.  error

	expr  goto 43
	typ  goto 20
	args  goto 73


state 64
	expr : ID LPAREN args_opt RPAREN .  (33)

	.  reduce 33


state 65
	parameter_list : ID .  (42)
	parameter_list : ID . COMMA parameter_list  (43)

	COMMA  shift 74
	RPAREN  reduce 42


state 66
	statement : DEF ID LPAREN parameters . RPAREN COLON statement_list ENDEF  (4)

	RPAREN  shift 75
	.  error


state 67
	parameters : parameter_list .  (41)

	.  reduce 41


state 68
	statement_list : statement .  (12)
	statement_list : statement . statement_list  (13)

	LITERAL  shift 3
	BLIT  shift 4
	ID  shift 5
	LPAREN  shift 6
	DEF  shift 7
	IF  shift 8
	WHILE  shift 9
	RETURN  shift 10
	INT  shift 11
	BOOL  shift 12
	BREAK  shift 13
	CONTINUE  shift 14
	DEREF  shift 15
	ENDEF  reduce 12
	ELSE  reduce 12
	ENDIF  reduce 12
	NEXT  reduce 12

	statement  goto 68
	statement_list  goto 76
	expr  goto 19
	typ  goto 20


state 69
	statement : IF expr COLON statement_list . ELSE COLON statement_list ENDIF  (5)
	statement : IF expr COLON statement_list . ENDIF  (6)

	ELSE  shift 77
	ENDIF  shift 78
	.  error


state 70
	statement : WHILE expr COLON statement_list . NEXT  (7)

	NEXT  shift 79
	.  error


state 71
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : DEREF expr ASSIGN expr .  (25)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	LITERAL  reduce 25
	BLIT  reduce 25
	ID  reduce 25
	LPAREN  reduce 25
	RPAREN  reduce 25
	COLON  reduce 25
	COMMA  reduce 25
	DEF  reduce 25
	ENDEF  reduce 25
	ELSE  reduce 25
	IF  reduce 25
	ENDIF  reduce 25
	WHILE  reduce 25
	NEXT  reduce 25
	RETURN  reduce 25
	INT  reduce 25
	BOOL  reduce 25
	ASSIGN  reduce 25
	EOF  reduce 25
	BREAK  reduce 25
	CONTINUE  reduce 25
	DEREF  reduce 25


state 72
	expr : expr . PLUS expr  (21)
	expr : expr . MINUS expr  (22)
	expr : typ Id_catg ASSIGN expr .  (24)
	expr : expr . EQ expr  (26)
	expr : expr . NEQ expr  (27)
	expr : expr . MUL expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . GT expr  (30)
	expr : expr . LTE expr  (31)
	expr : expr . GTE expr  (32)

	PLUS  shift 31
	MINUS  shift 32
	EQ  shift 33
	NEQ  shift 34
	LT  shift 35
	GT  shift 36
	LTE  shift 37
	GTE  shift 38
	MUL  shift 39
	LITERAL  reduce 24
	BLIT  reduce 24
	ID  reduce 24
	LPAREN  reduce 24
	RPAREN  reduce 24
	COLON  reduce 24
	COMMA  reduce 24
	DEF  reduce 24
	ENDEF  reduce 24
	ELSE  reduce 24
	IF  reduce 24
	ENDIF  reduce 24
	WHILE  reduce 24
	NEXT  reduce 24
	RETURN  reduce 24
	INT  reduce 24
	BOOL  reduce 24
	ASSIGN  reduce 24
	EOF  reduce 24
	BREAK  reduce 24
	CONTINUE  reduce 24
	DEREF  reduce 24


state 73
	args : expr COMMA args .  (39)

	.  reduce 39


state 74
	parameter_list : ID COMMA . parameter_list  (43)

	ID  shift 65
	.  error

	parameter_list  goto 80


state 75
	statement : DEF ID LPAREN parameters RPAREN . COLON statement_list ENDEF  (4)

	COLON  shift 81
	.  error


state 76
	statement_list : statement statement_list .  (13)

	.  reduce 13


state 77
	statement : IF expr COLON statement_list ELSE . COLON statement_list ENDIF  (5)

	COLON  shift 82
	.  error


state 78
	statement : IF expr COLON statement_list ENDIF .  (6)

	.  reduce 6


state 79
	statement : WHILE expr COLON statement_list NEXT .  (7)

	.  reduce 7


state 80
	parameter_list : ID COMMA parameter_list .  (43)

	.  reduce 43


state 81
	statement : DEF ID LPAREN parameters RPAREN COLON . statement_list ENDEF  (4)
